--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
     />
   </head>
   <body>
-    <h1>Arbeidskrav i programmering</h1>
+    <h1>ARBEIDSKRAV PGR104</h1>
+    <p class="result">List of existing employees:</p>
+    <div class="array_container">
+      <div class="array_card">
+        <p id="array"></p>
+      </div>
+    </div>
     <p>Please press a button:</p>
     <div class="container">
       <button type="button" class="add btn">ADD EMPLOYEE</button>
@@ -24,12 +30,6 @@
       <button type="button" class="avg btn">CALCULATE AVERAGE SALARY</button>
     </div>
     <!--<p class="result hidden">Well done! Open console to see result.</p>!-->
-    <p class="result">List of existing employees:</p>
-    <div class="array_container">
-      <div class="array_card">
-        <p id="array"></p>
-      </div>
-    </div>
     <!--<div class="skew_container">
       <div class="skew"></div>
     </div>!-->
