--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
   </head>
   <body>
     <h1>ARBEIDSKRAV PGR104</h1>
-    <p class="result">List of existing employees:</p>
+    <p>List of existing employees:</p>
     <div class="array_container">
       <div class="array_card">
         <p id="array"></p>
       </div>
     </div>
-    <p>Please press a button:</p>
+    <p class="result">Please press a button:</p>
     <div class="container">
       <button type="button" class="add btn">ADD EMPLOYEE</button>
       <button type="button" class="remove btn">REMOVE EMPLOYEE</button>
