--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
       </div>
     </div>
     <p class="result">Please press a button:</p>
-    <div class="container">
+    <div class="btn_container">
       <button type="button" class="add btn">ADD EMPLOYEE</button>
       <button type="button" class="remove btn">REMOVE EMPLOYEE</button>
     </div>
-    <div class="container2">
+    <div class="btn_container2">
       <button type="button" class="count btn">COUNT EMPLOYEES</button>
       <button type="button" class="sort btn">SORT BY GENDER</button>
     </div>
-    <div class="container3">
+    <div class="btn_container3">
       <button type="button" class="avg btn">CALCULATE AVERAGE SALARY</button>
     </div>
     <!--<p class="result hidden">Well done! Open console to see result.</p>!-->
